--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="fr">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZSTS627JB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PZSTS627JB');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-T2QTN79M');</script>
+    <!-- End Google Tag Manager -->
+
+    <!-- Vérification Google Site -->
+    <meta name="google-site-verification" content="30lLvncsUDVfIYFrCyg51EWeUay9xOF6mDsXOMrAOis" />
+
+    <!-- Description -->
     <title>Focus Chronométré - Améliorez votre productivité</title>
 
     <!-- Feuilles de style -->
@@ -22,10 +47,16 @@
     <link rel="icon" type="image/svg+xml"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⏱️</text></svg>">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PZSTS627JB"></script>
 
 <body>
     <!-- Navigation -->
     <!-- Dans la navigation principale -->
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T2QTN79M" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <nav class="main-nav">
         <div class="nav-container">
             <div class="logo">
@@ -302,19 +333,19 @@
                     <h3>En quelques chiffres</h3>
                     <div class="stats-grid">
                         <div class="stat-box">
-                            <div class="stat-number" data-count="10000">0</div>
+                            <div class="stat-number" data-count="15">0</div>
                             <div class="stat-label">Utilisateurs</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-number" data-count="2000">0</div>
+                            <div class="stat-number" data-count="200">0</div>
                             <div class="stat-label">Minutes de focus</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-number" data-count="99">0</div>
+                            <div class="stat-number" data-count="7">0</div>
                             <div class="stat-label">% Satisfaction</div>
                         </div>
                         <div class="stat-box">
-                            <div class="stat-number" data-count="24">0</div>
+                            <div class="stat-number" data-count="5">0</div>
                             <div class="stat-label">Mises à jour</div>
                         </div>
                     </div>
